style.css
* {
	box-sizing: border-box;
	/*transition: all ease .2s;*/
}

body,html{
	height: 100%;
	width: 100%;
	position: relative;
	margin: 0;
}

body {
	padding: 0;
	font-size: 14pt;
	font-family: Roboto,"Helvetica Neue", Arial, sans-serif;
	
}
p {
	line-height: 1.6;
}

input {
	
	outline: none;
	border: none;
	box-shadow: inset 0px -2px 0px rgba(255,255,255,.3);
	font-size: 16pt;
	line-height: 1.6;

	font-family: "Roboto", "Helvetica Neue", arial, sans-serif;
	height: auto;
	border-radius: 2px;
}
.dynamic-area {
	width: 100%;
	height: 100%;
}
.night-mode .label,
.night-mode .section__header__text {
	font-size: 12pt;
	color: rgba(255,255,255,.6);
}
.theme--magenta input:focus {
	box-shadow: inset 0px -4px 0px #cf2890;
}
.movies input {
	width: 100%;
}
.state {
	width: 100%;
}
.field {
	padding: 20px;
	display: block;
}
.field input {
	display: block;
	background-color: white;
	color: black !important;
	margin-top: .5em;
	padding: 5px 10px;
	min-width: 3em;
}
.movie-detail .field {
	padding-left: 0;
}
.movie-detail .button--flat:hover {
	background-color: rgba(0,0,0, .05);
}
.night-mode .button--primary {
    border: none;
}
.button:focus,
.button--primary:focus,
.night-mode .button:focus,
.night-mode .button--primary:focus  {
	background-color: #cf2890 !important: 
}

.search-results {
	list-style-type: none;
    padding: 0;
    display: block;
}
.search-results .message {
	padding-left: 20px;
	font-style: italic;
	opacity: .6;
}
.movies {
	height: 100%;
	overflow-y: scroll;
	-webkit-overflow-scrolling: touch;
	background-color: rgba(255,255,255,.1);
	position: absolute;
    left: 0;
    z-index: 0;
}

.movie {
    display: block;
    margin: 0;
    padding: .75em;
    border-top: 1px solid rgba(255,255,255,.05);
    font-size: .9em;
    vertical-align: middle;
    position: relative;
    padding-left: 60px;
    height: 3.2em;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}
.movie:focus {
	outline: none;
}
.movie__year {
	font-size: 10pt;
	opacity: .5;
}
.result .movie__poster {
	width: 30px;
	top: 50%;
	margin-top: -23px;
	height: 45px;
	position: absolute;
	left: 20px;
}
.movies__add-new {
	border-bottom: 1px solid rgba(255,255,255,.2);
    padding-bottom: 1em;
    background-color: #2A2A2A;
}
/*.theme--magenta .movies__add-new {
	background-color: #cf2890;
}*/
.movie:first-child {
	border-top: 0;
}
.movie:hover {
	cursor: pointer;
}
.night-mode .movie.selected {
	background-color: rgb(0, 216, 184);
}
.movie-detail {
	
	height: 100%;
	box-shadow: 0px 0px 20px rgba(0,0,0,.5);
	padding: 65px 5px;
	text-align: center;
	float: right;
	z-index: 0;
	right: 0;
	background-color: rgb(0, 216, 184);
	overflow-y: auto;
}
.movie-detail__content {
	display: inline-block;
	width: 800px;
	text-align: left;
	max-width: calc(100% - 40px);
}
.movie-detail__content__main {
	overflow: hidden;
	margin-bottom: 1em;
}

.movie-detail .movie__poster {
	float: left;
	clear: left;
	margin-right: 20px;
	width: 80px;
	height: auto;
}
.movie-detail h3 {
	font-size: 2em;
	font-weight: 200;
	color: rgba(255,255,255,.8);
	margin: 0 0 .2em;
}
.year {
	font-size: 16pt;
	display: inline-block;
	margin-left: .5em;
	color: white;
}
.rating {
	margin: 1em 0;
}

.star {
	display: none;
	width: .75em;
	height: .75em;
	background-color: rgba(255,255,255,.2);
	border-radius: 1em;
	margin-right: .5em;
	display: inline-block;
}
.rating--1 .star--1,
.rating--2 .star--1,
.rating--2 .star--2,
.rating--3 .star--1,
.rating--3 .star--2,
.rating--3 .star--3,
.rating--4 .star--1,
.rating--4 .star--2,
.rating--4 .star--3,
.rating--4 .star--4,
.rating--5 .star--1,
.rating--5 .star--2,
.rating--5 .star--3,
.rating--5 .star--4,
.rating--5 .star--5 {
	background-color: #FFE13A;
}

.watch-fields,
.add-button,
.delete-button {
	display: none;
}
.new-selected ~ .watch-fields,
.new-selected ~ .add-button,
.existing-selected ~ .delete-button {
	display: block;
}
.button--back {
	position: absolute;
	top: 10px;
	left: 25px;
}

@media only screen and (max-width: 500px) {
	.button svg {
		top: .8em;
		left: .2em;
	}
}
@media only screen and (min-width: 1000px) {
	body {
		font-size: 15pt;
	}
	.movie-detail {
		padding: 70px 20px;
		width: calc(100% - 400px);
	}
	.movies {
		width: 400px;
	}
	.movie {
		padding: .75em 3.2em;
	}
	.field input {
		padding: .4em 0;
		color: white !important;
		background-color: transparent;
	}
	.state {
		display: block !important;
	}
	.movie-detail h3 {
		font-size: 3em;
	}
	.button--back {
		display: none;
		top: 20px;
	}
	
}

